--- a/main.css
+++ b/main.css
@@ -6,9 +6,16 @@ body {
     padding: 0;
 }
 
-p, h1 {
+h1 {
     text-align: center;
     font-size: 2.5rem;
+    margin: 20px 0;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+p{
+    text-align: center;
+    font-size: 2.0rem;
     margin: 20px 0;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -21,8 +28,8 @@ p, h1 {
 }
 
 .centered-image {
-    width: 20%; /* Scales the image to 20% of its container's width */
-    max-width: 20%; /* Ensures the image doesn't become too large */
+    width: 35%; /* Scales the image to 20% of its container's width */
+    max-width: 35%; /* Ensures the image doesn't become too large */
     height: auto; /* Maintains aspect ratio */
     border-radius: 10px; /* Optional: rounds the corners of the image */
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Optional: adds a subtle shadow */
@@ -35,7 +42,7 @@ p, h1 {
 }
 
 input[type="text"] {
-    width: 60%;
+    width: 70%;
     padding: 12px;
     border: none;
     border-radius: 30px;
@@ -47,7 +54,7 @@ input[type="text"] {
 }
 
 button {
-    padding: 10px 20px;
+    padding: 10px 10px;
     background-color: #6c5ce7;
     color: white;
     border: none;
@@ -65,7 +72,7 @@ button:hover {
 }
 
 .weather-table {
-    max-width: 1000px;
+    max-width: 700px;
     margin: 10px auto;
     background: #fff;
     color: #333;
@@ -80,14 +87,16 @@ table {
     border-radius: 20px;
 }
 
-table th,
 table td {
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
 table th {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
     background-color: #6c5ce7;
     color: white;
 }
@@ -109,9 +118,8 @@ table td img {
     margin: 0 auto; /* Center the icons in the table cells */
 }
 
-
 .chart-section {
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 40px auto;
     text-align: center;
 }
@@ -122,26 +130,23 @@ table td img {
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
-    width: 90%;
+    width: 80%;
 }
 
 .chart-container canvas {
     display: block;
     margin: 0 auto;
     width: 100%;
-    height: 400px;
+    height: 1000px;
 }
+
+  .list-group-item {
+    font-size: 16px;
+  }
 
 .error {
     color: red;
     text-align: center;
     margin: 20px 0;
     font-size: 1.2rem;
-}
-
-footer {
-    text-align: center;
-    margin-top: 40px;
-    color: #f7f7f7;
-    font-size: 0.9rem;
 }
