--- a/main.css
+++ b/main.css
@@ -80,13 +80,14 @@ button:hover {
 }
 
 .weather-table {
-    max-width: 700px;
-    margin: 10px auto;
+    max-width: 600px;
     background: #fff;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
+    padding: 5px;
+    margin: 5px;
 }
 
 table {
@@ -95,18 +96,18 @@ table {
     border-radius: 20px;
 }
 
-table td {
-    padding: 5px;
+table td,
+table th {
+    padding: 6px;
+    font-size: 12px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
 
 table th {
-    padding: 10px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
     background-color: #6c5ce7;
     color: white;
+    font-size: 14px;
 }
 
 table tr:nth-child(even) {
@@ -121,7 +122,7 @@ table tr:nth-child(odd) {
 
 table tr:hover {
     background-color: #d1ecf9;
-    /* Highlighted blue on hover for better visibility */
+    /* Highlighted blue on hover */
 }
 
 table td img {
@@ -131,30 +132,31 @@ table td img {
 }
 
 .chart-section {
-    max-width: 1500px;
-    margin: 40px auto;
+    max-width: 600px;
     text-align: center;
-
+    margin: 20px auto;
 }
 
 .chart-container {
     background: #fff;
-    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
-    width: 60%;
+    padding: 15px;
+    width: 100%;
 }
 
 .chart-container canvas {
     display: block;
     margin: 0 auto;
-    width: 80%;
-    height: 1000px;
+    width: 100%;
+    height: 300px;
 }
 
+
 .list-group-item {
-    font-size: 16px;
+    font-size: 14px;
+    /* Adjust font size for better readability */
 }
 
 .error {
